# backend-test-desent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: b1a2c3d4e5f6_create_users_table.py  cae3570d55fb_auto_migration_20260407_103909.py
app/: config.py  dependencies.py  main.py
app/api/v1/routers/: auth.py  books.py  health.py  users.py
app/core/: database.py  pagination.py  security.py
app/middleware/: error_handler.py
app/models/: book.py  user.py
app/repositories/: book_repository.py  user_repository.py
app/schemas/: auth.py  book.py  user.py
app/services/: book_service.py  user_service.py
docker/: Dockerfile  entrypoint.sh
scripts/: seed.py
